add picture to product
